force-app/main/default/objects/VehicleUser__c/VehicleUser__c.object-meta.xml
<CustomObject>
    <description>User information by vehicle</description>
    <label>Vehicle User</label>
    <nameField>
        <label>Vehicle User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle User</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>