force-app/main/default/objects/VehicleUser__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vehicle Users</relationshipLabel>
    <relationshipName>Vehicle_Users</relationshipName>
    <type>Lookup</type>
</CustomField>