force-app/main/default/objects/VehicleUser__c/fields/manoj__c.field-meta.xml
<CustomField>
    <fullName>manoj__c</fullName>
    <description>Created By:
Created Date:
User Story:
Purpose</description>
    <label>manoj</label>
    <length>255</length>
    <type>Text</type>
</CustomField>