force-app/main/default/objects/VehicleUser__c/fields/Primary_Vehicle_User__c.field-meta.xml
<CustomField>
    <fullName>Primary_Vehicle_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Vehicle User</label>
    <type>Checkbox</type>
</CustomField>