force-app/main/default/objects/VehicleUser__c/fields/Relation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Relation_End_Date__c</fullName>
    <label>Relation End Date</label>
    <type>Date</type>
</CustomField>