force-app/main/default/objects/VehicleUser__c/fields/Relation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Relation_Start_Date__c</fullName>
    <label>Relation Start Date</label>
    <type>Date</type>
</CustomField>