force-app/main/default/objects/VehicleUser__c/fields/Relation_to_Representative_Owner__c.field-meta.xml
<CustomField>
    <fullName>Relation_to_Representative_Owner__c</fullName>
    <label>Relation to Representative Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Locale</valueSetName>
    </valueSet>
</CustomField>