force-app/main/default/objects/VehicleUser__c/fields/Relation_to_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Relation_to_Vehicle__c</fullName>
    <label>Relation to Vehicle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Locale</valueSetName>
    </valueSet>
</CustomField>