force-app/main/default/objects/VehicleUser__c/fields/Vehicle_Name__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Name__c</fullName>
    <formula>Vehicle__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Name</label>
    <type>Text</type>
</CustomField>