force-app/main/default/objects/VehicleUser__c/recordTypes/Owner.recordType-meta.xml
<RecordType>
    <fullName>Owner</fullName>
    <active>true</active>
    <label>Owner</label>
</RecordType>