force-app/main/default/objects/VehicleUser__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>Vehicle_Name__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Relation_End_Date__c</columns>
    <columns>Relation_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>